- SCIPcreateSolNLP() now creates a SCIP_SOL that is linked to the solution of the current NLP relaxation
- it is now possible in SCIP_STAGE_TRANSFORMED to call SCIPaddVarLocks (i.e. to lock variables in initialization methods)

design:
- SCIP_HASHMAP now works also without block memory
- the 'make' parameter 'PARASCIP=true' leads to threadsafe message handlers where you need to call SCIPcreateMesshdlrPThreads and SCIPmessageSetHandler/SCIPmessageSetDefaultHandler and SCIPfreeMesshdlrPThreads; therefor we need to link with pthread library

SCIP version 2.0.2
==================

fixed bugs:
- fixed bug in heur_subnlp.c where constraints forbidding variable fixations where added if a cutoff was used in the subproblem
- fixed wrong assert in plugins that use SCIPcopy()
- fixed wrong (neg)cliquepartition check in cons_knapsack.c when deleting a coefficient
- fixed memory leak in SoPlex LP interface when requesting an unbounded solution
- fixed memory leak in SoPlex LP interface when solving with LP scaling
- fixed memory leaks in reader of TSP example 
- fixed bug while after restarting possible the aggregted variables were not removed in setppc constraints
- fixed various small bugs in nonlinear expressions code
- fixed bug in DINS heuristic that occured when the incumbent solution value is outside the variable's current domain 
- fixed bug in DINS w.r.t. column generation
- fixed bug in heur_subnlp.c where wrong constraints forbidding variable fixations where added in case of general integers
- fixed bug in var.c where a possible multiaggregation was resolved to an aggregation but the variables types were not checked to prefer more general types for aggregating; possible memory loss removed
- fixed behavior of LNS heuristics when the subproblem aborts: continue in optimized mode, stop in debug mode
- fixed bug in prop_vbounds.c w.r.t. infinity lower and upper bound of variable bound variables
- fixed make/make.project 